<resources>
    <string name="app_name">Goalify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_score">Live Score</string>
    <string name="competitionname">CompetitionName</string>
    <string name="live">Live</string>
    <string name="match">Match</string>
    <string name="round">Round:</string>
    <string name="score">Score</string>
    <string name="matches">Matches</string>
    <string name="hometeam">HomeTeam</string>
    <string name="awayteam">AwayTeam</string>
    <string name="_22_00">22:00</string>
    <string name="no_event_found">No event found</string>
    <string name="time">Time</string>
    <string name="week">Week</string>
    <string name="matchstatue">matchStatue</string>
    <string name="selector">Selector</string>
    <string name="shots_on_goal">Shots on goal</string>
    <string name="total_shots">Total Shots</string>
    <string name="possession">Possession</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="red_cards">Red Cards</string>
    <string name="corners">Corners</string>
    <string name="fouls">Fouls</string>
    <string name="penalties">Penalties</string>
    <string name="offsides">Offsides</string>
    <string name="coach">Coach</string>
    <string name="starting_lineup">Starting LineUp</string>
    <string name="no_lineup_founded">No LineUp Founded</string>
    <string name="substitutes">Substitutes</string>
    <string name="substitutions">Substitutions</string>
    <string name="goals_scorer">Goals Scorer</string>
    <string name="goalify">Goalify</string>
    <string name="top_scorer">Top Scorer</string>
    <string name="playername">PlayerName</string>
    <string name="teamname">TeamName</string>
    <string name="playerimage">PlayerImage</string>
    <string name="playergoals">PlayerGoals</string>
    <string name="top_assist">Top Assist</string>
    <string name="player_assists">Player Assists</string>
</resources>