<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Presentation.Fragments.TopScorerFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/top_assist"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="@dimen/_20sdp"
        android:id="@+id/txt_topAssist"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_topAssist"
        android:orientation="horizontal"
        android:weightSum="4"
        android:id="@+id/titlesBlock"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinmedium"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/playerimage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playername"
            android:layout_weight="1"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:fontFamily="@font/poppinmedium"
            android:textColor="@color/cardNameColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamname"
            android:textSize="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/poppinmedium"
            android:textColor="@color/cardNameColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_assists"
            android:textSize="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/poppinmedium"
            android:textColor="@color/cardNameColor"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/titlesBlock"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:id="@+id/topAssistRecycler"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/mainColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progress"/>
</androidx.constraintlayout.widget.ConstraintLayout>