<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/gradient_color">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/competitionname"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinmedium"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:id="@+id/competitionName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/competitionName"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/round"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:id="@+id/matchRound"/>

        <ImageView
            android:id="@+id/homeTeamImage"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/matchRound" />
        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/homeTeamImage"
            app:layout_constraintBottom_toBottomOf="@id/homeTeamImage"
            android:src="@drawable/ic_launcher_background"
            android:layout_marginEnd="@dimen/_10sdp"
            android:id="@+id/awayTeamImage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:fontFamily="@font/poppinsregular"
            app:layout_constraintStart_toEndOf="@id/homeTeamImage"
            app:layout_constraintEnd_toStartOf="@id/awayTeamImage"
            app:layout_constraintTop_toTopOf="@id/homeTeamImage"
            app:layout_constraintBottom_toBottomOf="@id/homeTeamImage"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:id="@+id/matchScore"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/matchRound"
            android:text="@string/time"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/matchTime"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>