<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Presentation.Fragments.LineUpFragment">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:id="@+id/txt_coach"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_coach"
            app:layout_constraintTop_toTopOf="@id/txt_coach"
            app:layout_constraintBottom_toBottomOf="@id/txt_coach"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:id="@+id/homeCoach"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txt_coach"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_coach"
            app:layout_constraintBottom_toBottomOf="@id/txt_coach"
            android:fontFamily="@font/poppinsregular"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:id="@+id/awayCoach"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting_lineup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_coach"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:id="@+id/txt_startingLineUp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_startingLineUp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:id="@+id/startingLineUpRecycler"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_startingLineUp"
            app:layout_constraintBottom_toTopOf="@id/txt_substitutes"
            android:text="@string/no_lineup_founded"
            android:textSize="@dimen/_25sdp"
            android:fontFamily="@font/poppinssemibold"
            android:id="@+id/txt_noLineUpFounded"
            android:visibility="visible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/substitutes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startingLineUpRecycler"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:id="@+id/txt_substitutes"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_substitutes"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:id="@+id/substitutesRecycler"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_substitutes"
            app:layout_constraintBottom_toBottomOf="@id/txt_substitutions"
            android:text="@string/no_lineup_founded"
            android:textSize="@dimen/_25sdp"
            android:fontFamily="@font/poppinssemibold"
            android:id="@+id/txt_substitutesnoLineUpFounded"
            android:visibility="visible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/substitutions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/substitutesRecycler"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:id="@+id/txt_substitutions"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_substitutions"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:id="@+id/substitutionsRecycler"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
