<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/cardsColor"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:weightSum="2"
            android:orientation="horizontal"
            android:id="@+id/homeTeamBlock">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hometeam"
                android:fontFamily="@font/poppinsregular"
                android:textSize="@dimen/_15sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/cardNameColor"
                android:layout_weight="1"
                android:id="@+id/homeTeamName"/>
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                android:id="@+id/homeTeamImage"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:weightSum="3"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/timeBlock">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/_22_00"
                android:layout_weight="1"
                android:textColor="@color/cardNameColor"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/matchTime"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/cardNameColor"
                android:layout_weight="1"
                android:id="@+id/matchScore"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/cardNameColor"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/matchStatue"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/awayTeamBlock">
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_launcher_background"
                android:layout_weight="1"
                android:id="@+id/awayTeamImage"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:gravity="center"
                android:textColor="@color/cardNameColor"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/awayteam"
                android:id="@+id/awayTeamName"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>