<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Presentation.Fragments.MatchDetailsFragment">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"
        android:id="@+id/startGuide"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/startGuide">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_color">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/competitionname"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/poppinssemibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:id="@+id/competitionName"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/competitionName"
                app:layout_constraintBottom_toBottomOf="parent"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="vertical"
                    android:id="@+id/homeTeamBlock">
                    <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="0dp"
                        android:src="@drawable/ic_launcher_background"
                        android:layout_gravity="center"
                        android:layout_weight="1.5"
                        android:id="@+id/homeTeamImage"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hometeam"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsregular"
                        android:textSize="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:id="@+id/homeTeamName"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:id="@+id/detailsBlock">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsregular"
                        android:textSize="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:id="@+id/matchRound"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/score"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppinsregular"
                        android:textSize="@dimen/_15sdp"
                        android:id="@+id/matchScore"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/matchstatue"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppinsregular"
                        android:textSize="@dimen/_10sdp"
                        android:id="@+id/matchStatue"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:orientation="vertical"
                    android:id="@+id/awayTeamBlock">
                    <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:src="@drawable/ic_launcher_background"
                        android:layout_gravity="center"
                        android:id="@+id/awayTeamImage"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/awayteam"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppinsregular"
                        android:textSize="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:id="@+id/awayTeamName"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40"
        android:id="@+id/selectorsRecyclerHeight"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintTop_toBottomOf="@id/startGuide"
        app:layout_constraintBottom_toTopOf="@id/selectorsRecyclerHeight"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/selectorsRecycler"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/selectorsRecyclerHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/fragmentsContainer">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>